--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,23 @@
 body {
     padding-top: 5rem;
 }
+
+.label{
+    font-weight: bold;
+}
+
+.red-text{
+    color: red;
+}
+
+.submit{
+  width: 80px;
+  background-color:#4081c7;
+  color: white;
+  padding: 8px 16px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
