--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,6 +23,13 @@
     <main>
         <div class="container">
             {% block main %}{% endblock %}
+            {% with messages = get_flashed_messages() %} 
+              {% if messages %} <ul class="flashes"> 
+                {% for message in messages %}   
+                  <li class="red-text">{{ message }}</li> 
+                {% endfor %} </ul> 
+              {% endif %} 
+            {% endwith %}
         </div>
     </main>
     <footer>
