--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-  <a class="navbar-brand" href="#">Lab 3</a>
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background: #000000;">
+  <a class="navbar-brand" href="#">Flask</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -11,6 +11,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('about') }}">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
       </li>
     </ul>
   </div>
